changed into a class, started gui

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,10 @@
-[Settings]
-QUERY_LOCATION = "M:/CPP-Data/Sutherland RPA/Northwell Process Automation ETM Files/Monthly Reports/Charge Correction/New vs Established/Query/"
-FORMATTED_INPUT_LOCATION = "M:/CPP-Data/Sutherland RPA/Northwell Process Automation ETM Files/Monthly Reports/Charge Correction/New vs Established/Formatted Inputs/"
-DATE_FORMAT = "MMddyyyy"
+[DEFAULT]
+QUERY_LOCATION = M:/CPP-Data/Sutherland RPA/Northwell Process Automation ETM Files/Monthly Reports/Charge Correction/New vs Established/Query/
+FORMATTED_INPUT_LOCATION = M:/CPP-Data/Sutherland RPA/Northwell Process Automation ETM Files/Monthly Reports/Charge Correction/New vs Established/Formatted Inputs/
+OUTPUT_DATE_FORMAT = MMddyyyy
+
+# GUI OPTIONS
+[GUI]
+WINDOW_TITLE = CCN Bot - New vs Established
+WINDOW_WIDTH = 500
+WINDOW_HEIGHT = 300
